--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ h1 {
     display: none;
 }
 
+
 .away {
     width: 50%;
     text-align: center;
@@ -193,6 +194,7 @@ h1 {
     height: 250px;
     font-family: Roboto, sans-serif;
     display: none;
+
 }
 
 .card-header {
@@ -339,4 +341,13 @@ h1 {
     position: absolute;
     bottom: 70%;
     left: 72%;
+}
+.away_card{
+    position: absolute;
+    left: 36%;
+    top: -213%;
+    z-index: 1;
+    width: 250px;
+    height: 250px;
+    font-family: Roboto, sans-serif;
 }
